--- a/cliente/ge-anuncio/src/ad/ad-list/ad-list.component.html
+++ b/cliente/ge-anuncio/src/ad/ad-list/ad-list.component.html
@@ -1,20 +1,28 @@
-<div *ngIf="adList.length" class="row">
-  <caption class="col-10">Lista de anúncios</caption>
-    <table class="table table-striped col-10">
-      <thead>
-        <tr>
-          <th scope="col">Descrição</th>
-          <th scope="col">Valor</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let ad of adList">
-          <td>{{ad.description}}</td>
-          <td>{{ad.value}}</td>
-        </tr>
-      </tbody>
-    </table>
-</div>
-<div *ngIf="!adList.length" class="alert alert-warning" role="alert">
-  Nenhum anúncio para listar
+
+<div class="album py-5">
+  <div class="container">
+    <div class="row">
+
+      <div *ngFor="let ad of adList" class="col-md-4">
+        <div class="card mb-4 shadow-sm">
+          <!--<img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">-->
+          <img class="card-img-top" src="" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">{{ad.description}}</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+              </div>
+              <small class="text-muted">9 mins</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="!adList.length" class="alert alert-warning" role="alert">
+        Nenhum anúncio para listar
+    </div>    
+  </div>
 </div>
