--- a/cliente/ge-anuncio/src/app/app.component.html
+++ b/cliente/ge-anuncio/src/app/app.component.html
@@ -1,7 +1,4 @@
-<div class="container-fluid">
-    <div class="container-fluid">
-        <ge-ad-list></ge-ad-list>
-    </div>    
-</div>
-
-
+<ge-menu></ge-menu>
+<main role="main" class="container">
+    <ge-ad-list></ge-ad-list>
+</main>
