Componente ad-router e ad-new

--- a/cliente/ge-anuncio/src/app/app.component.html
+++ b/cliente/ge-anuncio/src/app/app.component.html
@@ -1,5 +1,6 @@
 <ge-menu></ge-menu>
 <main role="main" class="container">
-    <ge-ad-list></ge-ad-list>
+    <!--<ge-ad-list></ge-ad-list>-->
+    <router-outlet></router-outlet>
 </main>
 <ge-footer></ge-footer>
