--- a/cliente/ge-anuncio/src/app/ad/ad-list/ad-list.component.html
+++ b/cliente/ge-anuncio/src/app/ad/ad-list/ad-list.component.html
@@ -7,7 +7,7 @@
       <div *ngFor="let ad of adList" class="col-md-4">
         <div class="card mb-4 shadow-sm">
           <!--<img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">-->
-          <img class="card-img-top" src="https://a-static.mlcdn.com.br/618x463/notebook-lenovo-ideapad-320-intel-celeron-n3350-4gb-1tb-led-156-windows-10/magazineluiza/218313700/ede357e0d01c0b9c8c4a60fe533526fa.jpg" alt="Card image cap">
+          <img class="card-img-top" [src]="ad.urlImage" alt="Card image cap">
           <div class="card-body">
             <p class="card-text">{{ad.description}}</p>
             <div class="d-flex justify-content-between align-items-center">
