--- a/cliente/ge-anuncio/src/app/menu/menu.component.html
+++ b/cliente/ge-anuncio/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Anúncios <span class="sr-only">(current)</span></a>
+          <a class="nav-link" [routerLink]="['ad', 'list']" routerLinkActive="router-link-active" >Anúncios <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Usuários</a>
